Creacion de controller User y autorize en maquinaria

--- a/UESAN.StoreDB.API/appsettings.json
+++ b/UESAN.StoreDB.API/appsettings.json
@@ -5,9 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=WS2302347;Database=Storedb;Integrated Security=true;TrustServerCertificate=True"
+    "DevConnection": "Server=localhost;Database=PROMCOSER;User Id=root;Password=123456789;"
   },
   "JWTSettings": {
     "SecretKey": "SMMSDU4343ASDSAD234234S232132132",
